AM_CPPFLAGS		 = -I$(top_srcdir)/include

noinst_LIBRARIES	 = libfc.a
libfc_a_SOURCES		 =
libfc_a_SOURCES		+= fc_assert.c
libfc_a_SOURCES		+= fc_dict.c
libfc_a_SOURCES		+= fc_flopen.c
libfc_a_SOURCES		+= fc_hash.c
libfc_a_SOURCES		+= fc_log.c
libfc_a_SOURCES		+= fc_pidfile.c
libfc_a_SOURCES		+= fc_readlinev.c
libfc_a_SOURCES		+= fc_readword.c
libfc_a_SOURCES		+= fc_sbuf.c
libfc_a_SOURCES		+= fc_strlcat.c
libfc_a_SOURCES		+= fc_strlcpy.c
