AM_CPPFLAGS		 = -I$(top_srcdir)/include

noinst_LIBRARIES	 = libft.a
libft_a_SOURCES		 =
libft_a_SOURCES		+= ft_assert.c
libft_a_SOURCES		+= ft_dict.c
libft_a_SOURCES		+= ft_flopen.c
libft_a_SOURCES		+= ft_hash.c
libft_a_SOURCES		+= ft_ip4.c
libft_a_SOURCES		+= ft_ip4_set.c
libft_a_SOURCES		+= ft_log.c
libft_a_SOURCES		+= ft_pidfile.c
libft_a_SOURCES		+= ft_readlinev.c
libft_a_SOURCES		+= ft_readword.c
libft_a_SOURCES		+= ft_sbuf.c
libft_a_SOURCES		+= ft_strlcat.c
libft_a_SOURCES		+= ft_strlcpy.c
